스타일 변경
10개 파일
ArtworkSection.js (제작년도, 재료, 크기 추가)
ClssCell.js ("artwork information" 문구추가)
SectionCard.js ("작품에 대한 의견을 남겨주세요 추가")
IPhone14ProMax1.js ("소제목 삭제")
reportWebVitals.js (ts오류 수정)

--- a/src/pages/IPhone14ProMax1.module.css
+++ b/src/pages/IPhone14ProMax1.module.css
@@ -3,22 +3,26 @@
   position: relative;
   line-height: 32px;
 }
+
 .spacer,
 .spacer1 {
   align-self: stretch;
   overflow: hidden;
 }
+
 .spacer1 {
   position: relative;
   height: 12px;
   flex-shrink: 0;
 }
+
 .spacer {
   display: none;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
+
 .typography,
 .typography1,
 .typographyParent {
@@ -27,14 +31,17 @@
   align-items: flex-start;
   justify-content: flex-start;
 }
+
 .typography1 {
   color: var(--color-black);
 }
+
 .typographyParent {
   position: absolute;
   top: 953px;
   left: 16px;
 }
+
 .groupChild {
   position: absolute;
   top: 0;
@@ -43,26 +50,31 @@
   width: 430px;
   height: 59px;
 }
+
 .div,
 .icons {
-  position: relative;
+  position: center;
 }
+
 .icons {
   width: 28px;
   height: 28px;
   overflow: hidden;
   flex-shrink: 0;
 }
+
 .div {
   line-height: 24px;
   font-weight: 500;
 }
+
 .iconsParent,
 .rectangleParent {
   position: absolute;
   left: 0;
   width: 430px;
 }
+
 .iconsParent {
   top: 59px;
   background-color: var(--color-white);
@@ -73,6 +85,7 @@
   align-items: center;
   justify-content: space-between;
 }
+
 .rectangleParent {
   top: 0;
   height: 111px;
@@ -80,14 +93,20 @@
   font-size: var(--typography-label-large-size);
   color: var(--color-black);
 }
+
 .iphone14ProMax1 {
   position: relative;
   background-color: var(--color-white);
   width: 100%;
   height: 1960px;
   overflow: hidden;
-  text-align: left;
+  text-align: center;
   font-size: var(--typography-heading-small-size);
   color: var(--color-seagreen);
   font-family: var(--typography-heading-small);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  flex-direction: column;
 }
