--- a/src/components/LayoutSimpleSubLayoutTop.module.css
+++ b/src/components/LayoutSimpleSubLayoutTop.module.css
@@ -6,7 +6,7 @@
 .label {
   position: relative;
   line-height: 20px;
-  font-weight: 500;
+  font-weight: var(--typography-label-small-weight);
 }
 .container,
 .tooltip {
