--- a/src/components/SectionCard.module.css
+++ b/src/components/SectionCard.module.css
@@ -32,7 +32,7 @@
   justify-content: flex-start;
 }
 .typographyParent {
-  position: absolute;
+  /* position: absolute; */
   top: 135px;
   left: 0;
   align-items: center;
